--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
 
 <p>Главный питомец {{ animalService.emoji }}</p>
 
-<app-child>
+<app-child appMonkey>
   <app-grand-child></app-grand-child>
 </app-child>
